# a2a-acp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  OPPORTUNITIES.md  README.md  WHITEPAPER.md  auto_approval_policies.yaml  deploy.sh  docker-compose.yml  openapi.yaml  pyproject.toml  tools.codex.yaml  tools.gemini.yaml  tools.yaml
codex-tools/: apply_patch
config/: agents.json.example
docs/: DEVELOPMENT_TOOL_EXTENSION.md  index.html
src/a2a/: agent_card.py  agent_manager.py  models.py  server.py  (+2 more)
tests/: dummy_agent.py  run_tool_tests.py  test_a2a_acp_bridge.py  test_a2a_extension_compliance.py  test_a2a_extension_endpoints.py  test_a2a_push_integration.py  test_a2a_server.py  test_a2a_task_manager.py  test_a2a_task_manager_extension.py  test_audit_system_comprehensive.py  test_auth_endpoints.py  test_bash_executor_comprehensive.py  test_error_profiles.py  test_extension_backward_compatibility.py  test_file_utils.py  test_governor_manager.py  test_models.py  test_oauth_audit.py  test_oauth_manager.py  test_push_notifications.py  test_push_performance.py  test_settings.py  test_tool_config.py  test_tool_execution_extension.py  test_tool_protocol_compliance.py  test_tool_system_integration.py  test_zed_agent.py  test_zed_agent_auth.py
user-docs/: api-methods.md  architecture.md  configuration.md  deployment.md  development-setup.md  development-tool-extension.md  events.md  index.md  installation.md  interactive-conversations.md  oauth-authentication.md  push-notifications.md  quick-start.md  testing.md  tool-execution.md  troubleshooting.md
(+24 files in other folders)
